--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <title></title>
 
   <!-- CSS -->
-  <!-- Strapped ? 
+  <!-- Strapped 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> 
-  -->
+  --> 
   <!-- Google fonts -->
   <!-- Self styles -->
   <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -31,16 +31,29 @@
 
 <body>
   
+  <form>
+    <h1>Wiki Search</h1>
+  <input id="search-field" autocomplete="off">
+    <button type="submit" id="submit-search"></button>
+    <a target="_blank" href="https://en.wikipedia.org/wiki/Special:Random" id="random">Surprise me</a>
+  </form>
+  
+  <div id="results">
+  
+  </div>
+  
+  <a href="http://www.kurtpetrek.com" target="_blank">
+  <div id="kp-icon"></div>
+  </a>
+  
   
   
   
   <!-- Scripts 
   ============================= -->
-  <!-- jQuery ?
+  <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  -->
-  <!-- strapped ?
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
+  
   <script src="js/main.js"></script>
 </body>
 
