--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   
   <form>
-    <h1>Wiki Search</h1>
+    <h1>Searchpedia</h1>
   <input id="search-field" autocomplete="off">
     <button type="submit" id="submit-search"></button>
     <a target="_blank" href="https://en.wikipedia.org/wiki/Special:Random" id="random">Surprise me</a>
